--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@ He received his Ph. D. from the Department of Computer Science at Michigan State
   </tr>
 </table>
 <H1> Books </h1>
-1.	N. Ratha and R. Bolle (Eds.) Automatic Fingerprint Recognition Systems, ISBN:  0387955933, Springer ,  October 2003.
-2.	R. Bolle, J. Connell, S. Pankanti, N. Ratha and A. Senior, Guide to Biometrics, ISBN: 0387400893, Springer, October 2003.
-3.	N. Ratha and V. Govindaraju, “Advances in Biometrics”, ISBN: 978-1846289200, Springer, October,  2007.
-4.	R. Singh, M. Vatsa, N. Ratha and V. Patel (Eds.) Domain Adaptation for Visual Understanding, Springer 2020
-
+<ol>
+  <li>N. Ratha and R. Bolle (Eds.) Automatic Fingerprint Recognition Systems, ISBN:  0387955933, Springer ,  October 2003.</li>
+  <li>R. Bolle, J. Connell, S. Pankanti, N. Ratha and A. Senior, Guide to Biometrics, ISBN: 0387400893, Springer, October 2003.</li>
+  <li>N. Ratha and V. Govindaraju, “Advances in Biometrics”, ISBN: 978-1846289200, Springer, October,  2007.</li>
+  <li> R. Singh, M. Vatsa, N. Ratha and V. Patel (Eds.) Domain Adaptation for Visual Understanding, Springer 2020 </li>
+</ol> 
 <H1> Special Issues </h1>
 <H1> Patents </h1>
 <H1> Journal Papers </h1>
