--- a/index.html
+++ b/index.html
@@ -31,20 +31,11 @@ Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research 
 
 He received his Ph. D. from the Department of Computer Science at Michigan State University and B.Tech in Electrical Engineering and M. Tech in Computer science and Engineering from Indian Institute of Technology, Kanpur. He is a Fellow of IEEE, Fellow of IAPR and ACM Distinguished Scientist.  His current research interests include biometrics, computer vision, pattern recognition and special purpose architecture for computer vision systems. In 2019, he won the IEEE Biometrics Council Leadership award. 
 <H1> Professional Membership </h1>
-<table>
-  <tr>
-    <td>Fellow</td>
-    <td>IEEE</td>
-  </tr>
-  <tr>
-    <td>Fellow</td>
-    <td>IAPR</td>
-  </tr>
-  <tr>
-    <td>Distinguished Scientist</td>
-    <td>ACM</td>
-  </tr>
-</table>
+<ol>
+  <li> Fellow, IEEE </li>
+  <li>Fellow, IAPR </li>
+  <li>Distinguished Scientist, ACM</li>
+</ol> 
 <H1> Books </h1>
 <ol>
   <li>N. Ratha and R. Bolle (Eds.) Automatic Fingerprint Recognition Systems, ISBN:  0387955933, Springer ,  October 2003.</li>
