--- a/index.html
+++ b/index.html
@@ -43,9 +43,50 @@ He received his Ph. D. from the Department of Computer Science at Michigan State
   <li>N. Ratha and V. Govindaraju, “Advances in Biometrics”, ISBN: 978-1846289200, Springer, October,  2007.</li>
   <li> R. Singh, M. Vatsa, N. Ratha and V. Patel (Eds.) Domain Adaptation for Visual Understanding, Springer 2020 </li>
 </ol> 
-<H1> Special Issues </h1>
-<H1> Patents </h1>
+<H1> Conference proceedings </h1>
+<ol>
+<li> Anil K. Jain and Nalini K. Ratha (Eds.) SPIE Volume 5404.  Proc. of Biometrics Technology for Human Identification, ISBN: 0-8194-5327-7, 2004. </li>
+<li> Anil K. Jain and Nalini K. Ratha (Eds.) SPIE Volume 5779.  Proc. of Biometrics Technology for Human Identification, ISBN: 0-8194-5764-7, 2005. </li>
+<li> T. Kanade, A. K. Jain and N. K. Ratha, Proc. Of AVBPA 2005. July 2005 </li>
+<li> IEEE CVPR Workshop on Biometrics, June 2006 (with Prof. Bir Bhanu)
+<li> IEEE CVPR Workshop on Biometrics, June 2007 (With Prof. Bir Bhanu) </li>
+<li> IEEE CVPR Workshop on Biometrics, June 2007 (With Prof. Bir Bhanu and Prof. Venu Govindaraju) </li>
+<li> IEEE Biometrics Theory Applications and Systems (BTAS), Sept. 2007 (with K. Bowyer, V. Govindaraju and P. Flynn) </li>
+<li> IEEE Biometrics Theory Applications and Systems (BTAS), Sept. 2008 (with K. Bowyer, V. Govindaraju and M. Nixon) </li>
+<li> IEEE Biometrics Theory Applications and Systems (BTAS), Sept. 2016 </li>
+</ol>
+<H1> Associate Editor/Special Issues Editor </h1>
+<ol>
+<li> Associate Editor Pattern Recognition Journal
+<li> Associate Editor, IEEE Trans. on Image Processing
+<li> Associate Editor, IEEE Trans. on Pattern Analysis and Machine Intelligence
+<li> Associate Editor, IEEE Trans. On System Man and Cybernetics, Part B.
+<li> Spl. Issue on Biometrics, IEEE Trans. On System Man and Cybernetics, Part B.
+<li> Spl. Issue on Human Detection and Recognition”, IEEE Trans. on Information Forensics and Security (T-IFS)
+<li> Spl. Issue on Domain Adaptation in Visual Understanding, Pattern Recognition Journal (in progress)
+<li> Spl. Issue on Blockchain, IEEE Computer (July 2020)
+</ol>
 <H1> Journal Papers </h1>
+<ol>
+<li> M Singh, R Singh, M Vatsa, N K Ratha, R Chellappa , Recognizing disguised faces in the wild, IEEE Transactions on Biometrics, Behavior, and Identity Science 1(2), 97--108, IEEE, 2019 </li>
+<li> G Goswami, A Agarwal, N Ratha, R Singh, M Vatsa, Detecting and mitigating adversarial perturbations for robust face recognition, International Journal of Computer Vision 127 (6-7), 719-742, 2019 </li>
+<li> Patel, V.M.; Ratha, N.K.; Chellappa, R., "Cancelable Biometrics: A review," in Signal Processing Magazine, IEEE , vol.32, no.5, pp.54-65, Sept. 2015 </li>
+<li> H. S. Bhatt, R. Singh, M. Vatsa, N. K. Ratha, “Improving Cross-Resolution Face Matching Using Ensemble-Based Co-Transfer Learning”, IEEE Trans. On Image Processing, Vol. 23, No. 12, pp. 5654—5668, Dec. 2014. </li>
+<li> N. K. Ratha, J. H. Connell and S. Pankanti, "Big Data approach to biometric-based identity analytics," in IBM Journal of Research and Development, vol. 59, no. 2/3, pp. 4:1-4:11, March-May 2015. </li>
+<li> Pankanti, S.; Brown, L.; Connell, J.; Datta, A.; Fan, Q.; Feris, R.; Haas, N.; Li, Y.; Ratha, N.; Trinh, H.; , "Practical computer vision: Example techniques and challenges," IBM Journal of Research and Development , vol.55, no.5, pp.3:1-3:12, Sept.-Oct. 2011 </li>
+<li> Pillai, J.K.; Patel, V.M.; Chellappa, R.; Ratha, N.K.; , "Secure and Robust Iris Recognition Using Random Projections and Sparse Representations," Pattern Analysis and Machine Intelligence, IEEE Transactions on , vol.33, no.9, pp.1877-1893, Sept. 2011 </li>
+<li> N. K. Ratha, S. Chikkerur, J. H. Connell and R. M. Bolle, “Generating cancelable fingerprint templates”, IEEE Trans. on PAMI, Vol. 29, No. 4, pp. 561—572, April 2007. </li>
+<li> C. Dorai, N. K. Ratha and R. M. Bolle, “Dynamic Behavior Analysis in Compressed Fingerprint Videos”, IEEE Trans. CSVT, Vol. 14, No. 1, pp. 58—74, Jan 2004. </li>
+<li> R M. Bolle, N. K. Ratha and S. Pankanti, “Error analysis of pattern recognition systems––the subsets bootstrap, Computer Vision and Image Understanding, Vol. 93, No. 1, pp. 1-33, Jan. 2004. </li>
+<li> N. K. Ratha, J. H. Connell and R. M. Bolle, “Biometrics break-ins and band aids”, Pattern Recognition Letters, Vol. 24, No. 13, pp. 2105-2113, Sept. 2003. </li>
+<li> R. M. Bolle, J. H. Connell and N. K. Ratha, “Biometric Perils and Patches”, Pattern Recognition, Vol. 35, No. 12, pp. 2727-2738, Dec. 2002. </li>
+<li> N. K. Ratha, J. H. Connell and R. M. Bolle, “Enhancing security and privacy in biometrics-based authentication systems”, IBM Systems Journal, Vol. 40, No. 3, pp. 614-634, Sep. 2001. </li>
+<li> N. K. Ratha and A.K. Jain, “Computer Vision Algorithms on Reconfigurable Logic Arrays”, IEEE Trans. Parallel and Distributed Systems, Vol. 10, No. 1, pp. 29-43, 1999. </li>
+<li> A.K. Jain, N. K.  Ratha and S. Lakshmanan, “Object Detection Using Gabor Filters”, Pattern Recognition, Vol. 30, No. 2, pp. 295-309, 1997. </li>
+<li> N. K. Ratha, S. Chen, K. Karu and A.K. Jain, “A Real-time Matching System for Large Fingerprint Databases”, IEEE Trans. Pattern Analysis and Machine Intelligence, Vol. 18, 8, pp. 799-813, 1996.</li>
+<li> N. K. Ratha, S. Chen and A.K. Jain, “Adaptive Flow Orientation Based Feature Extraction in Fingerprint Images”, Pattern Recognition, Vol. 28, pp. 1657-1672, November 1995. </li>
+</ol>
+<H1> Patents </h1>
 <H1> Conference Papers </h1>
 </body>  
 </html>
