--- a/index.html
+++ b/index.html
@@ -36,6 +36,40 @@ He received his Ph. D. from the Department of Computer Science at Michigan State
   <li>Fellow, IAPR </li>
   <li>Distinguished Scientist, ACM</li>
 </ol> 
+<H1> Awards and recognition </h1>
+<ul>
+<li> 2019 IEEE Biometrics Council Leadership Award </li>
+<li>2019 IBM Research Division Award </li>
+<li>2019 IBM 22nd Invention Plateau achievement award</li>
+<li>2019 IBM 21st Invention Plateau achievement award</li>
+<li> 2018 IBM Master Inventor </li>
+<li>2018 IBM 20th Invention Plateau achievement award</li>
+<li>2018 IBM 19th Invention Plateau achievement award</li>
+<li>2018 IBM 18th Invention Plateau achievement award</li>
+<li>2018 IBM 17th Invention Plateau achievement award</li>
+<li>2018 IBM 16th Invention Plateau achievement award</li>
+<li>2016 IBM Fifteenth Invention Plateau achievement award</li>
+<li>2015 IBM Thirteenth Invention Plateau achievement award</li>
+<li>2014 IBM Ninth Invention Plateau achievement award</li>
+<li>2010 IBM Outstanding Technical Accomplishment Award</li>
+<li>2008 IBM Outstanding Innovation Award</li>
+<li>2008 IBM Eighth Invention Plateu achievement award</li>
+<li>2008 IBM Outstanding Technical Innovation Award</li>
+<li>2008 IBM Seventh Invention Plateu achievement award</li>
+<li>2007 IBM Fifth Invention Plateu achievement award</li>
+<li>2004 IBM Fourth Invention Plateu achievement award</li>
+<li>2001 IBM Third Invention Plateau achievement award</li>
+<li>2000 IBM Second Invention Plateau achievement award</li>
+<li>1999 IBM First Invention Plateau achievement award</li>
+<li>1998 IBM Research Division award</li>
+<li>1997 IBM first patent application invention achievement award</li>
+<li>1991 CMC Appreciation Award for successful completion of FACTS project</li>
+<li>1991 First Prize, technical paper contest on chance print fingerprint matching from Ministry of Home Affairs, India (with  N.  N. Murthy  and S. Ramesh)</li>
+<li>1977-82 National Merit Scholarship, Govt. of India</li>
+<li>1977 First in order of merit, Intermediate Science, Berhampur University</li>
+<li>1975-77 National Merit Scholarship, Govt. of  India</li>
+</ul>
+
 <H1> Books </h1>
 <ol>
   <li>N. Ratha and R. Bolle (Eds.) Automatic Fingerprint Recognition Systems, ISBN:  0387955933, Springer ,  October 2003.</li>
