--- a/index.html
+++ b/index.html
@@ -121,6 +121,98 @@ He received his Ph. D. from the Department of Computer Science at Michigan State
 <li> N. K. Ratha, S. Chen and A.K. Jain, “Adaptive Flow Orientation Based Feature Extraction in Fingerprint Images”, Pattern Recognition, Vol. 28, pp. 1657-1672, November 1995. </li>
 </ol>
 <H1> Patents </h1>
+<ol>
+	<p>Co-inventor in the following patents:<p>
+<li> EP 1825418: Fingerprint Biometric Machine Representations Based On Triangles </li>
+<li>	Germany 112010003796: System And Method For Generating And Employing Short Length Iris Codes </li>
+<li>	Germany 602005045732.1: Fingerprint Biometric Machine Representations Based On Triangles </li>
+<li>	Japan 3254645:  System And Method For Data Hiding In Compressed Fingerprint Images </li>
+<li>	Japan 4678883: Method, System, And Program Product For Transforming A Biometric Image </li>
+<li>	Japan 5039103: Fingerprint Representation Using Localized Texture Feature </li>
+<li>	Japan 5506785: Fingerprint Represenation Using Gradient Histograms </li>
+<li>	Japan: 5596155: Fingerprint Represenation Using Gradient Histograms </li>
+<li>	Korea 323603: System And Method For Distortion Control In Live-Scan Inkless Fingerprint Images </li>
+<li>	Singapore 71122:  System And Method For Distortion Control In Live-Scan Inkless Fingerprint Images </li>
+<li>	Taiwan I236634: System And Method For Liveness Authentication Using An Augmented Challenge/Response Scheme </li>
+<li>	Taiwan I469059:  Method, Apparatus And Computer Program Product Implementing Anonymous Biometric Matching </li>
+<li>	Taiwan NI-144770: System And Method For Distortion Control In Live-Scan Inkless Fingerprint Images </li>
+<li>	UK 1825418: System And Method For Generating And Employing Short Length Iris Codes </li>
+<li>	UK 2486129: System And Method For Generating And Employing Short Length Iris Codes </li>
+<li>	US 6,301,368 System and method for data hiding in compressed fingerprint images </li>
+<li>	US 6,597,802 System and method for generating a rolled surface representation from a set of partial images </li>
+<li>	US 6,819,219 Method for biometric-based authentication in wireless communication for access control </li>
+<li>	US 6,836,554 System and method for distorting a biometric for transactions with enhanced security and privacy </li>
+<li>	US 6,851,051: System and method for liveness authentication using an augmented challenge/response scheme </li>
+<li>	US 6,941,001: To a combined fingerprint acquisition and control device  </li>
+<li>	US 6301368: System And Method For Distortion Control In Live-Scan Inkless Fingerprint Images </li>
+<li>	US 6597802: System And Method For Distortion Control In Live-Scan Inkless Fingerprint Images </li>
+<li>	US 6819219:  System And Method For Generating A Rolled Surface Representation From A Set Of Partial Images </li>
+<li>	US 6836554: Method For Biometric-Based Authentication In Wireless Communication For Access Control </li>
+<li>	US 6851051: System And Method For Distorting A Biometric For Transactions With Enhanced Security And Privacy </li>
+<li>	US 6941001: Method For Biometric-Based Authentication In Wireless Communication For Access Control </li>
+<li>	US 7,054,470: System and method for distortion characterization in fingerprint and palm-print image sequences and using this distortion as a behavioral biometrics </li>
+<li>	US 7,072,523: System and method for fingerprint image enhancement using partitioned least-squared filters </li>
+<li>	US 7,120,607: Business system and method using a distorted biometrics </li>
+<li>	US 7,130,452: System and method for multi-party validation, authentication and/or authorization via biometrics </li>
+<li>	US 7,508, 960: Projection of light patterns for liveness verification of biometrics </li>
+<li>	US 7,822,238: Method, system, and program product for transforming a biometric image </li>
+<li>	US 7054470: To A Combined Fingerprint Acquisition Control Device </li>
+<li>	US 7130452: System And Method For Distortion Characterization In Fingerprint And Palm-Print Image Sequences And Using This Distortion As A Behavioral Biometrics </li>
+<li>	US 7508960: System And Method For Multi-Party Validation, Authentication And/Or Authorization Via Biometrics </li>
+<li>	US 7822238: Fingerprint Biometric Machine Representations Based On Triangles </li>
+<li>	US 8,121,355: Brain shape as a biometric  </li>
+<li>	US 8,180,121: Fingerprint Representation Using Localized Texture Feature </li>
+<li>	US 8,249,314: Anonymous And Revocable Fingerprint Recognition </li>
+<li>	US 8,290,219: Registration-free transforms for cancelable iris biometrics </li>
+<li>	US 8,296,573: System and Method For Remote Self-Enrolment in Biometric Database </li>
+<li>	US 8,452,058: Method and apparatus for repeatable facial distortion </li>
+<li>	US 8,452,131: Iris recognition system and method </li>
+<li>	US 8121355: Fingerprint Biometric Machine Representations Based On Triangles </li>
+<li>	US 8180121: Brain Shape As A Biometric </li>
+<li>	US 8249314: Method For Biometric-Based Authentication In Wireless Communication For Access Control </li>
+<li>	US 8290219: Anonymous And Revocable Fingerprint Recognition </li>
+<li>	US 8296573: Registration-Free Transforms For Cancelable Iris Biometrics </li>
+<li>	US 8452058: System And Method For Remote Self-Enrollment In Biometric Databases </li>
+<li>	US 8452131:  Method And Apparatus For Repeatable Facial Distortion </li>
+<li>	US 8532344 Iris Recognition System And Method </li>
+<li>	US 8538096:  Methods And Apparatus For Generation Of Cancelable Face Template </li>
+<li>	US 8625861: Methods And Apparatus For Generation Of Cancelable Fingerprint Template </li>
+<li>	US 8908929: System And Method For Generating And Employing Short Length Iris Codes </li>
+<li>	US 9031288: Unique Cardiovascular Measurements For Human Identification </li>
+<li>	US 9311703: Method And System For Categorizing Heart Disease  </li>
+<li>	US 9443168: Object Detection Approach Using An Ensemble Strong Classifier </li>
+<li>	US 9483696:  System And Method For Generating And Employing Short Length Iris Codes </li>
+<li>	US 9514354: Facial Analysis By Synthesis And Biometric Matching </li>
+<li>	ZL 201080042229.1: System And Method For Generating And Employing Short Length Iris Codes </li>
+<li>	ZL 201310130889.0: Unique Cardiovascular Measurements For Human Identification </li>
+<li>	Zl200580039037.4: Projection Of Light Patterns For Liveness Verification Of Biometrics </li>
+<li>	ZL200980117512.3: Fingerprint Representation Using Gradient Histograms </li>
+<li>	US9514354: Facial Analysis By Synthesis And Biometric Matching, Dec 2016 </li>
+<li>	US9633261: Salting System And Method For Cancelable Iris Biometric </li>
+<li>	US9678600: Display Device Including A Display Screen With Integrated Imaging And A Method Of Using Same, June 2017 </li>
+<li>	US9758095: Smartwatch Blackbox, Sep 2017 </li>
+<li>	US9811761: System, Method, And Recording Medium For Detecting Video Face Clustering With Inherent And Weak Supervision, Nov 2017 </li>
+<li>	US9852359: System, Method, And Recording Medium For Efficient Cohesive Subgraph Identification In Entity Collections For Inlier And Outlier Detection, Dec 2017 </li>
+<li>	US9894063: Anonymizing Biometric Data For Use In A Security System, Feb 2018 </li>
+<li>	US9858388: Health Monitoring Using Parallel Cognitive Processing, Jan 2018 </li>
+<li>	US9898674: Spoof Detection For Facial Recognition, Feb 2018 </li>
+<li>	US10046601: Smartwatch blackbox </li>
+<li>	US10318796: Age progression of subject facial image </li>
+<li>	US10333917: Controlling access to electronic resources based on a user's sociometric identification document </li>
+<li>	US10431116: Orator effectiveness through real-time feedback system with automatic detection of human behavioral and emotional states of orator and audience </li>
+<li>	US10420913: Airborne anxiety detection and remediation </li>
+<li>	US10432622: Securing biometric data through template distribution </li>
+<li>	US10216995B2, System and method for generating and employing short length iris codes </li>
+<li>	US10431116B2, Orator effectiveness through real-time feedback system with automatic detection of human behavioral and emotional states of orator and audience </li>
+<li>	US10333917B2, Controlling access to electronic resources based on a user's sociometric identification document </li>
+<li>	US10255674B2, Surface reflectance reduction in images using non-specular portion replacement </li>
+<li>	US10432622B2, Securing biometric data through template distribution </li>
+<li>	US10276053B2 , Cognitive system to improve athletic performance with motivation from different training styles </li>
+<li>	US10420913B2, Airborne anxiety detection and remediation </li>
+<li>	US10243952B2, Anonymizing biometric data for use in a security system </li>
+8<li>	US10318796B2, Age progression of subject facial image </li>
+<p>(Several more pending) </p>
+ </ol>
 <H1> Conference Papers </h1>
 </body>  
 </html>
