--- a/index.html
+++ b/index.html
@@ -210,9 +210,105 @@ He received his Ph. D. from the Department of Computer Science at Michigan State
 <li>	US10276053B2 , Cognitive system to improve athletic performance with motivation from different training styles </li>
 <li>	US10420913B2, Airborne anxiety detection and remediation </li>
 <li>	US10243952B2, Anonymizing biometric data for use in a security system </li>
-8<li>	US10318796B2, Age progression of subject facial image </li>
+<li>	US10318796B2, Age progression of subject facial image </li>
 <p>(Several more pending) </p>
  </ol>
 <H1> Conference Papers </h1>
+<ol>
+<li> K Nandakumar, N Ratha, S Pankanti , Proving Multimedia Integrity using Sanitizable Signatures Recorded on Blockchain, Proceedings of the ACM Workshop on Information Hiding and Multimedia security, 2019 </li>
+<li> 	S Nagpal, M Singh, R Singh, M Vatsa, N Ratha, Deep Learning for Face Recognition: Pride or Prejudiced?, arXiv preprint arXiv:1904.01219 </li>
+<li> 	M Merler, N Ratha, RS Feris, JR Smith, Diversity in faces, arXiv preprint arXiv:1901.10436 </li>
+<li> 	K Nandakumar, N Ratha, S Pankanti, S Halevi, Towards Deep Neural Network Training on Encrypted Data, Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops, 2019 </li>
+<li> 	A Goel, A Agarwal, M Vatsa, R Singh, N Ratha, DeepRing: Protecting Deep Neural Network with Blockchain, Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops, 2019 </li>
+<li> 	V Muthukumar, T Pedapati, N Ratha, P Sattigeri, CW Wu, B Kingsbury, A Kumar, S Thomas, A Mojsilovic, K Varshney, Understanding unequal gender classification accuracy from face images, arXiv preprint arXiv:1812.00099 </li>
+<li> 	V. Kushwaha, M. Singh, R. Singh, M. Vatsa, N. Ratha, and R. Chellappa, Disguised Faces in the Wild, IEEE International Conference on Computer Vision and Pattern Recognition Workshop on Disguised Faces in the Wild, 2018 </li>
+<li> 	R. Garg, Y. Baweja, S. Ghosh, R. Singh, M. Vatsa, N. Ratha, Heterogeneity Aware Deep Embedding for Mobile Periocular Recognition, In Proceedings of IEEE International Conference on Biometrics: Theory, Applications and Systems, 2018 </li>
+<li> 	G Goswami, N Ratha, A Agarwal, R Singh, M Vatsa, “Unravelling robustness of deep learning based face recognition against adversarial attacks”, AAAI, 2018 </li>
+<li> 	K. Nandakumar, N. Ratha, S. Pankanti, S. Darnell, “Single Use Biometric Tokens for Non-repudiable Multi-party Transactions”, IEEE WIFS 2017 </li>
+<li> 	Y Cheng, N Ratha, S Pankanti, “Outlier faces detector via efficient cohesive subgraph identification”, Image Processing (ICIP), 2016 IEEE International Conference on, 1659-1663 </li>
+<li> 	TA Siddiqui, S Bharadwaj, TI Dhamecha, A Agarwal, M Vatsa, R Singh, Face anti-spoofing with multifeature videolet aggregation, Pattern recognition (ICPR), 2016 23rd international conference on, 1035-1040 </li>
+<li> 	X. Peng, N. Ratha, and S. Pankanti, Learning Face Recognition from Limited Training Data Using Deep Neural Networks, ICPR-2016, Cancun, Mexico </li>
+<li> 	G. Goswami, N. Ratha, R. Singh, and M. Vatsa, Improving Classifier Fusion Via Pool Adjacent Violators Normalization, ICPR-2016, Cancun, Mexico </li>
+<li> 	C. Sagonas, Y. Panagakis, S. Arunkumar, N. Ratha, and S. Zafeiriou,  Back to the Future: A Fully Automatic Method for Robust Age Progression, ICPR-2016, Cancun, Mexico </li>
+<li> 	T. A. Siddiqui, S. Bharadwaj, T. Dhamecha, A. Agarwal, M. Vatsa, R. Singh and N. Ratha, Face Anti-Spoofing with Multifeature Videolet Aggregation, ICPR-2016, Cancun, Mexico </li>
+<li> 	H. Aronowitz, M. Li, O. Toledo-Ronen, S. Harary, A. Geva, S. Ben-David, A. Rendel, R. Hoory, N. Ratha, S. Pankanti, and D. Nahamoo, “Multi-Modal Biometrics for Mobile Authentication”, IJCB 2014, Clearwater, Florida, Sept 2014 </li>
+<li> 	M. Li, N. Ratha, W. Qian, S. Bao and Z. Su, “Face recognition using Early Biologically Inspired Features”, BTAS 2013, Sept. 2013 </li>
+<li> 	J. Connell, N. Ratha, J. Gentile, R Bolle, “Fake Iris Detection using structured light”, ICASSP, May 2013 </li>
+<li> 	N Codella, J Connell, N Ratha, “Cardiac Anatomy as a Biometric”, ICIP, Oct. 2012 </li>
+<li> 	H. Bhat, R. Singh, M. Vatsa, N. Ratha “Matching Cross-Resolution Face Images Using Co-Transfer Learning”, ICIP, Oct. 2012 </li>
+<li> 	V Tyagi, H K Prasad, T Faruquie, L. V Subramaniam, N Ratha, “Fusing Biographical and Biometric Classifiers for Improved Person Identification”, ICPR Nov. 2012 </li>
+<li> 	V. Tyagi, N. Ratha, Biometrics score fusion through discriminative training, IEEE CVPR Workshop on Biometrics, 2011 </li>
+<li> 	J. Basak, K. Kate, V. Tyagi, N. Ratha, QPLC: A novel multimodal biometric score fusion method, IEEE CVPR Workshop on Biometrics, 2010 </li>
+<li> 	V. Ramakrishnan, N. Ratha, Redundancy and diversity measure inspired biometrics fusion, IEEE CVPR Workshop on Biometrics, 2010 </li>
+<li> 	J. Basak, K. Kate, V. Tyagi, N. Ratha, A Gradient Descent Approach for Multi-modal Biometric Identification. ICPR 2010 </li>
+<li> 	J. K. Pillai, V. Patel, R. Chellappa, N. Ratha, Sectored Random Projections for Cancelable Iris Biometrics, IEEE ICASSP 2010 </li>
+<li> 	J.E. Gentile,   N. Ratha, J. Connell, An efficient, two-stage iris recognition system, Proc. of IEEE BTAS 2009 </li>
+<li> 	J.E. Gentile,   N. Ratha, J. Connell, SLIC: Short-Length Iris Codes, Proc. of IEEE BTAS 2009 </li>
+<li> 	G. Aggarwal, N. Ratha, J. Connell, and R. Bolle, "Physics-based Revocable Face Recognition",  ICASSP-08 Conference (Mar 08)</li>
+<li> 	G. Aggarwal, N. Ratha, R, Bolle, and R. Chellappa, “Multi-biometric Cohort Analysis for Biometric Fusion”, ICASSP-08, (Mar 08) </li>
+<li> 	J. Zuo, N. Ratha, and J. Connell, "A New Approach for Iris Segmentation", CVPR-08 Biometrics Workshop (Jun 08) </li>
+<li> 	S. Chikkerur, J. Connell, and N. Ratha, "Generating Registration-free Cancelable Fingerprint Templates", BTAS-08 Conference (Sept 08) </li>
+<li> 	J. Zuo, N. Ratha, and J. Connell, "Median Filter Based Iris Encoding Technique", BTAS-08 Conference (Sept 08) </li>
+<li> 	S. Biswas, N. Ratha, G. Aggarwal, and J. Connell, "Exploring Ridge Curvature for Fingerprint Indexing",  BTAS-08 Conference (Sept 08) </li>
+<li> 	G. Aggarwal, N. Ratha, T-Y. Jea and R. Bolle, "Gradient-based Textural Characterization of Fingerprints",  BTAS 08 </li>
+<li> 	J. Zuo, N. Ratha, and J. Connell,  "Cancelable Iris Biometric", ICPR-08 Conference (Dec 08) </li>
+<li> 	A. Thomas, N. Ratha, J. Connell, and R. Bolle, "Comparative Analysis of Registration Based and Registration Free Methods for Cancelable Fingerprint Biometrics", ICPR-08 Conference (Dec 08) </li>
+<li> 	F. Farooq, N. Ratha, T-Y. Jea, and R,Bolle “Security and Accuracy Trade-off in Anonymous Fingerprint Recognition”, Proc. Of IEEE Conf. on Biometrics Theory Applications and Systems (BTAS 07), 2007 </li>
+<li> 	F. Farooq, R. M. Bolle, T-Y. Jea and N. Ratha “Anonymous and Revocable Fingerprint Recognition, Proc. of CVPR Workshop on Biometrics, Minneapolis, 2007 </li>
+<li> 	N. K. Ratha, J. H. Connell, R. M. Bolle and S. Chikkerur, “Cancelable biometrics: a case study in fingerprints”, Proc. of International Conf. on Pattern Recognition (ICPR 2006), Hong Kong, August, 2006 </li>
+<li> 	S. Chikkerur, S. Pankanti, A. Jea, N. K. Ratha and R. M. Bolle, “Fingerprint representation using localized texture features”, Proc. of International Conf. on Pattern Recognition (ICPR 2006), Hong Kong, August, 2006 </li>
+<li> 	G. Aggarwal, N. K. Ratha and R. M. Bolle, “Biometric Verification: Looking beyond similarity scores”, Proc. of CVPR Workshop on Biometrics, New York, 2006 </li>
+<li> 	S.  Chikkerur, S. Pankanti, Nalini Ratha, R. Bolle and V. Govindaraju, "Novel Approaches for Minutiae Verification in Fingerprint Images",IEEE Workshop on Applications of Computer Vision 2005, Colardo, USA </li>
+<li> 	Sharat Chikkerur, Nalini Ratha, "Impact of Singular Point Detection on Fingerprint Matching Performance", accepted ,IEEE AUTOID 2005, Buffalo, NY, pp. 207—212 </li>
+<li> 	R. Bolle, J. H. Connell, S. Pankanti, N. K. Ratha and A. W. Senior, “The Relation between the ROC Curve and the CMC”, IEEE AutoID 2005, Buffalo, NY, pp. 15—20 </li>
+<li> 	R. Bolle, Sp. Pankanti and N. Ratha, “Large Scale Fingerprint Identification”, Working Together: R&D Partnerships in Homeland Security, April 27-28, Boston, Massachussets </li>
+<li> 	R. Bolle, N. Ratha and S. Pankanti, Subset Bootstrap Methods in Biometrics Systems, The Nineteenth New England Statistics Symposium Saturday, April 23, 2005 Department of Statistics, University of Connecticut </li>
+<li> 	Nalini K. Ratha, Miguel A. Figueroa-Vilanueva, Jon H. Connell and Ruud M. Bolle, ``A secure protocol for data hiding in compressed fingerprint images’’, Prod. Of ECCV, BioAWorkshop 2004, LNCS 3087, pp. 205 – 216, May 2004 </li>
+<li> 	Ruud M. Bolle, Nalini K. Ratha and Sharath Pankanti, ``An Evaluation of Error Confidence Interval Estimation Methods’’, Proc. of  ICPR 2004, Vol. 3, Cambridge, UK, August 2004, pp. 103—106 </li>
+<li> 	Ruud M. Bolle, Sharath Pankanti, Jonathan H. Connell, and Nalini K. Ratha ``Iris Individuality: A partial iris model’’, Proc. of  ICPR 2004, Vol. 2, Cambridge, UK, August, 2004, pp. 927—930 </li>
+<li> 	Ruud M. Bolle, Nalini K. Ratha and Sharath Pankanti,``Efficacy of joint person bootstrap estimation of confidence interval’’, Proc. of Workshop on Biometrics in conjunction with ICPR 2004 called Biometric Challenges arising from theory to  practice (BCTP 2004), pp. 55-58 </li>
+<li> 	Nalini K. Ratha, Ruud M. Bolle and Sharath Pankanti, ``Large-scale biometrics identification: Challenges and solutions,’’ Invited paper at International Workshop on Biometric Technologies (BT 2004), University of Calgary, pp. 29—38 </li>
+<li> 	Ruud M. Bolle, Nalini K. Ratha and Sharath Pankanti, ``Performance Evaluation in 1 : 1 Biometric Engines,’’ Invited paper for SinoBiometrics:  To be published in Dec. 2004 </li>
+<li> 	Sharath Chikkerur, Sharath Pankanti, Nalini Ratha and Ruud Bolle ``Novel approaches for minutiae filtering in fingerprint images’’ WACV paper (to appear in Jan 2005) </li>
+<li> 	M. A. Figueroa-Villanueva, N. K. Ratha and R. M. Bolle, “A comparative performance analysis of JPEG 2000 vs. WSQ for fingerprint image compression”, in Proc. of  Audio- and Video-Based Biometric Person Authentication (AVBPA 2003), Surrey, UK, June 2003,  pp. 385-392 </li>
+<li> 	S. Noronha, C. Dorai, N. K. Ratha and R. M. Bolle, “Architecture for synchronous multiparty authentication using biometrics”, in Proc. of  Audio- and Video-Based Biometric Person Authentication (AVBPA 2003), Surrey, UK, June 2003, pp. 609-616 </li>
+<li> 	M. Osborne and N. K. Ratha, “A JC-BioAPI compliant smart card with biometrics for secure access”, in Proc. of  Audio- and Video-Based Biometric Person Authentication (AVBPA 2003), Surrey, UK, June 2003, pp. 903-910 </li>
+<li> 	J. H. Connell, N. K. Ratha, R. M. Bolle, “Fingerprint image enhancement using weak models”, Proc. of International Conference on Image Processing (ICIP), Rochester, NY, Sept. 2002, Vol. 1 , pp. I-45 -I-48 </li>
+<li> 	S. Pankanti, N. K. Ratha, R. M. Bolle, “Structure in errors: a case study in fingerprint verification ,  Proc. of  16th International Conference on Pattern Recognition (ICPR), Quebec City, Vol. 3,  Aug. 2002, pp. 440-443 </li>
+<li> 	R. M. Bolle, A. W. Senior, N. K. Ratha and S. Pankanti, “Fingerprint Minutiae: A Constructive Definition”, in Proc. of Workshop on Biometric Authentication ECCV 2002, Denmark, June 2002, pp.  58-66 </li>
+<li> 	N. Haas, N. K. Ratha and R. M. Bolle, “Pre-enhancing non-uniformly illuminated fingerprint images”,  in Proc. of IEEE on Automatic Identification Advanced Technologies (AutoID 02), Tarrytown, NY, March 2002, pp. 89-94 </li>
+<li> 	M. Y. Yao, S. Pankanti, N. Haas, N. K. Ratha and R. M. Bolle, “Quantfying quality: a case study in fingerprints”, in Proc. of IEEE on Automatic Identification Advanced Technologies (AutoID 02), Tarrytown, NY, March 2002 pp.126-131 </li>
+<li> 	R. M. Bolle, S. Pankanti and N. K. Ratha, "Confidence Interval Measurement in Performance Analysis of Biometrics systems using the Bootstrap", Proc. IEEE Workshop on Empirical Evaluation Methods in Computer Vision, Hawaii, Dec. 2001 </li>
+<li> 	R. M. Bolle, N. K. Ratha and J. H. Connell, “Automated Biometrics: Security & Privacy”, in Proc. of Workshop on PRIS, Portugal, July 2001, pp. 2-11 </li>
+<li> 	N. K. Ratha, J. H. Connell and R. M. Bolle, "An Analysis of Minutia Matching Strength", in Proc. of  Audio- and Video-Based Biometric Person Authentication (AVBPA 2001), Halmstad, Sweden, June 2001, pp. 223-228 </li>
+<li> 	N. K. Ratha, A. Senior and R. M. Bolle, "Automated Biometrics",  in Proc. of  ICAPR, 2001, Rio, Brazil, March 2001, pp. 445-454 </li>
+<li> 	N. K. Ratha, R. M.  Bolle, V. D. Pandit, V. Vaish, “Robust fingerprint authentication using local structural similarity”, Fifth IEEE Workshop on. Applications of Computer Vision (WACV), Santa Barbara, CA, Dec. 2000, pp. 29 -34 </li>
+<li> 	S. Ghosal,  R. Udupa, S. Panknti, N. K.  Ratha, “Learning partitioned least squares filters for fingerprint enhancement”, Fifth IEEE Workshop on. Applications of Computer Vision (WACV), Santa Barbara, CA, Dec. 2000, pp. 2-7 </li>
+<li> 	N. K. Ratha, J. H. Connell and R. M. Bolle, “Secure data hiding in wavelet compressed fingerprint images”, in Proc. of  ACM Multimedia Workshops 2000, Los Angeles, CA, Oct. 2000, pp.127-130 </li>
+<li> 	R. M. Bolle, S. Pankanti, N. K. Ratha, “Evaluation techniques for biometrics-based authentication systems (FRR)”,  Proc. 15th International Conference on  Pattern Recognition (ICPR),  Barcelona, Spain, Vol. 2 ,  pp. 831-837,  Sept. 2000 </li>
+<li> 	S. Ghosal, N. K. Ratha, R. Udupa, S. Pankanti, “Hierarchical partitioned least squares filter-bank for fingerprint enhancement”, Proc. 15th International Conference on  Pattern Recognition (ICPR),  Barcelona, Spain, Sept. 2000, Vol. 3 ,  pp. 334-337 </li>
+<li> 	N. K. Ratha, A. K.  Jain, and D. T.  Rover, “FPGA-based coprocessor for text string extraction”, Proc. Fifth IEEE International Workshop on Computer Architectures for Machine Perception (CAMP-2000), Padova, Italy, Sept. 2000, pp. 217 -221 </li>
+<li> 	C. Dorai, N. K. Ratha and R. M. Bolle, “Detecting dynamic behavior in compressed fingerprint videos: distortion, Proc. IEEE Conference on Computer Vision and Pattern Recognition (CVPR),  Fort Collins, CO, June 2000, Vol. 2 , pp. 320 -326 </li>
+<li> 	N. K. Ratha and R. Bolle, “Fingerprint Image Quality Estimation”, in Proc. of ACCV-2000, Taipei, Jan 2000, pp. 819-823 </li>
+<li> 	N. K. Ratha, J. H. Connell and R. M. Bolle, “A biometrics-based secure authentication system”, in Proc. of IEEE Workshop on Automatic Identification Advanced Technologies (AutoId 99), Summit, NJ, Oct. 1999, pp. 70-73 </li>
+<li> 	R. M. Bolle, N. K. Ratha and S. Pankanti, “Evaluating fingerprint authentication systems using bootstrap confidence intervals”, in Proc. of IEEE on Automatic Identification Advanced Technologies (AutoID 99), Summit, NJ,  pp. 9-13 </li>
+<li> 	R. M. Bolle, N. K. Ratha, A. Senior and S. Pankanti, “Minutia template exchange format”, in Proc. Of  IEEE on Automatic Identification Advanced Technologies (AutoID 99), Summit, NJ, pp. 74-77 </li>
+<li> 	N. K. Ratha and R. M. Bolle, “Effect of controlled image acquisition on fingerprint matching”, in Proc. of Intl. Conf. on Pattern Recognition (ICPR-98), Brisbane, Australia, Aug. 1998, pp. 1659-1661 </li>
+<li> 	N. K. Ratha, J. H. Connell and R. M. Bolle, “Image Mosaicing for rolled fingerprint construction”, in Proc. of Intl. Conf. on Pattern Recognition (ICPR-98), Brisbane, Australia, Aug. 1998, pp. 1651-1653 </li>
+<li> 	R. M. Bolle, N. K. Ratha and S. Pankanti, “Research issues in biometrics”, in Proc. of   ACCV-98, Hong Kong, Jan. 1998, pp. 2-9 </li>
+<li> 	N. K. Ratha  and A. K. Jain, “FPGA-based computing in Computer vision”, in Proc. of IEEE Symposium on Computer Architecture for Machine Perception (CAMP-97), Boston, Oct. 1997, pp. 128-137 </li>
+<li> 	N. K. Ratha  and A. K. Jain, “Multilayer Perceptron on Splash 2”, ”, in Proc. of IEEE Symposium on Computer Architecture for Machine Perception (CAMP-97), Boston, Oct. 1997, pp. 138-142 </li>
+<li> 	R. S. Germain, R. Bolle, A. Califano, S. Colville, S. Pankanti, N. Ratha, “Issues in Large Scale Automatic Biometric Identification”, IEEE Workshop  on Automatic Identification Advanced Technologies, Stony Brook, Nov. 1997, pp. 43-46 </li>
+<li> 	N. K. Ratha, A. K. Jain and D.T Rover, “FPGA- based high performance page layout segmentation” in Proc. of IEEE Great Lakes Symposium on VLSI, Ames, Iowa, Mar. 1996, pp. 29-34 </li>
+<li> 	N. K Ratha, A.K. Jain “High performance custom computing for image segmentation”, in Proc. of IEEE Conf. on High performance Computing (HiPC-95), Dec. 1995, New Delhi, pp. 67-72 </li>
+<li> 	N. K Ratha, A. K. Jain and D.T. Rover, “An FPGA -based point pattern matching coprocessor with application to fingerprint matching”, in Proc.of IEEE Symposium on Computer Architecture for Machine Perception (CAMP-95), Como, Italy, pp. 394-401  </li>
+<li> 	N. K Ratha, A. K. Jain and  M. J. Chung, “Clustering using coarse-grained parallel genetic Algorithm: a Preliminary study”, in Proc. of IEEE Symposium on Computer Architecture for Machine Perception (CAMP-95), Como, Italy, pp. 394-401 </li>
+<li> 	N. K. Ratha, T. Acar, M. Gokman and A. K Jain , “A distributed edge detection and surface reconstruction  algorithm  based on weak membrane  modeling”, in Proc. of IEEE Symposium on Computer Architecture for Machine Perception (CAMP-95), Como, Italy, pp. 149-154.  </li>
+<li> 	N. K. Ratha, A. K. Jain and D.T. Rover, “Convolution on Splash 2” in proc. of IEEE Symposium on FPGAs for Custom computing Machines (FCCM-95), Napa, CA, pp.204-213. </li>
+<li> 	N. K. Ratha, A. K. Jain and S. Lakshmanan, “Object detection in the presence of clutter  using Gabor filters,” in Proc. of SPIE, Applications of digital Image Processing XVII, Vol. 2298, pp.612-623, September, 1994. </li>
+<li> 	D. Judd, N. K. Ratha, P. K . McKinley, J. Weng and A. K Jain, “Parallel implementation of vision algorithms on workstation clusters,” in proc. of IAPR- 94, Jerusalem , pp. 317- 321, October, 1994. </li>
+<li> 	S. H. Choi, N. K. Ratha, M. J. Chung  and D. T Rover, “Signal processing application using VHDL on Splash 2 ,” in VHDL International users’ Forum ( VIUF) Fall Conference, pp. 6.11-6,18, November, 1994. </li>
+
+</ol>
 </body>  
 </html>
