--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 
 <p>
 <a href="awards.html">  
-<img src="images/awards.jpg" alt="Awards and Recognitions" width="200" height="150">
+<img src="images/awards.jpg" alt="Awards and Recognitions" width="200">
 </a> 
 </p>
 
-
+<p>
+<a href="professional.html">  
+<img src="images/professional.jpg" alt="Professional" width="200">
+</a> 
+</p>
 <ul>
 
 <li> <a href="books_proceedings.html"> Books and Proceedings </a> </li>
