--- a/index.html
+++ b/index.html
@@ -47,26 +47,36 @@ Understanding (DAVU) for Pattern Recognition journal. He has received several pa
 and NYU-Poly as an Adjunct professor for last several years. He served as the President of the IEEE Biometrics Council from Jan 2011-Dec 2012 and 
 currently serves as the nomination chair for the IEEE Biometrics Council. He has served on advisory board of EU-INGRESS and EU-Fidelity and served 
 on several NSF evaluation panels. 
-
+<p>
 He received his Ph. D. from the Department of Computer Science at Michigan State University and B.Tech in Electrical Engineering and 
 M. Tech in Computer science and Engineering from Indian Institute of Technology, Kanpur. He is a Fellow of IEEE, Fellow of IAPR and 
 ACM Distinguished Scientist.  
-
+</p>
+<p>
 His current research interests include biometrics, computer vision, pattern recognition and special purpose architecture for computer vision systems. 
 In 2019, he won the IEEE Biometrics Council Leadership award. 
-
+</p>
 
 <p>
 <a href="awards.html">  
-<img src="images/awards.jpg" alt="Awards and Recognitions" width="200">
+<img src="images/awards.jpg" alt="Awards and Recognitions" width="300">
+</a> 
+
+<a href="professional.html">  
+<img src="images/professional.jpg" alt="Professional" width="300">
 </a> 
 </p>
 
 <p>
-<a href="professional.html">  
-<img src="images/professional.jpg" alt="Professional" width="200">
+<a href="journal_paper.htmll">  
+<img src="images/journal.jpg" alt="Journal Papers" width="300">
+</a> 
+
+<a href="books_proceedings.html">  
+<img src="images/books.jpg" alt="Books and Proceedings" width="300">
 </a> 
 </p>
+
 <ul>
 
 <li> <a href="books_proceedings.html"> Books and Proceedings </a> </li>
