--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 </p>
 
 <p>
-<a href="journal_paper.htmll">  
+<a href="journal_paper.html">  
 <img src="images/journal.jpg" alt="Journal Papers" width="300">
 </a> 
 
@@ -77,13 +77,19 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 </a> 
 </p>
 
+<p>
+<a href="project.html">  
+<img src="images/projects.jpg" alt="Projects" width="300">
+</a> 
+
+<a href="patents.html">  
+<img src="images/patents.jpg" alt="Patents" width="300">
+</a> 
+</p>
+
 <ul>
 
-<li> <a href="books_proceedings.html"> Books and Proceedings </a> </li>
-<li> <a href="projects.html"> Projects </a> </li>
-<li> <a href="journal_paper.html"> Journal papers </a> </li>
 <li> <a href="conference_papers.html"> Conference papers </a> </li>
-<li> <a href="patents.html"> Patents </a> </li>
 </ul>
 
 <p> Contact me: nalini dot ratha at gmail dot com </p>
