--- a/index.html
+++ b/index.html
@@ -87,10 +87,16 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 </a> 
 </p>
 
-<ul>
+<p>
+<a href="education.html">  
+<img src="images/education.jpg" alt="Education" width="300">
+</a> 
 
-<li> <a href="conference_papers.html"> Conference papers </a> </li>
-</ul>
+<a href="conference_papers.html">  
+<img src="images/conference.jpg" alt="Conference Papers" width="300">
+</a> 
+</p>
+
 
 <p> Contact me: nalini dot ratha at gmail dot com </p>
 </body>  
