--- a/index.html
+++ b/index.html
@@ -24,9 +24,56 @@ tr:nth-child(even) {
 </style>
 </head>
 <body>
-<img src="images/nalini_face.jpg" alt="Nalini Ratha" width="100" height="100"> 
-<!-- img src="nalini_face.jpg" alt="Nalini Ratha" -->
-<h1> Introduction </h1>
+<img src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150"> 
+
+<p>
+<a href="education.html">  
+<img src="images/education.jpg" alt="Education" width="300">
+</a> 
+
+<a href="awards.html">  
+<img src="images/awards.jpg" alt="Awards and Recognitions" width="300">
+</a> 
+
+<a href="professional.html">  
+<img src="images/professional.jpg" alt="Professional" width="300">
+</a> 
+</p>
+
+<p>
+<a href="project.html">  
+<img src="images/projects.jpg" alt="Projects" width="300">
+</a> 
+
+<a href="patents.html">  
+<img src="images/patents.jpg" alt="Patents" width="300">
+</a> 
+</p>
+
+<p>
+<a href="journal_paper.html">  
+<img src="images/journal.jpg" alt="Journal Papers" width="300">
+</a> 
+
+<a href="conference_papers.html">  
+<img src="images/conference.jpg" alt="Conference Papers" width="300">
+</a> 
+
+<a href="books_proceedings.html">  
+<img src="images/books.jpg" alt="Books and Proceedings" width="300">
+</a> 
+</p>
+
+
+
+<p>
+
+
+
+</p>
+
+
+<h1> Summary </h1>
 Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York where he lead the biometrics 
 research effort in the area of enhancing security of biometrics systems and performance evaluation of biometrics systems. 
 Currently, he focuses on extending the techniques to build robust and trustworthy AI systems. 
@@ -57,45 +104,6 @@ His current research interests include biometrics, computer vision, pattern reco
 In 2019, he won the IEEE Biometrics Council Leadership award. 
 </p>
 
-<p>
-<a href="awards.html">  
-<img src="images/awards.jpg" alt="Awards and Recognitions" width="300">
-</a> 
-
-<a href="professional.html">  
-<img src="images/professional.jpg" alt="Professional" width="300">
-</a> 
-</p>
-
-<p>
-<a href="journal_paper.html">  
-<img src="images/journal.jpg" alt="Journal Papers" width="300">
-</a> 
-
-<a href="books_proceedings.html">  
-<img src="images/books.jpg" alt="Books and Proceedings" width="300">
-</a> 
-</p>
-
-<p>
-<a href="project.html">  
-<img src="images/projects.jpg" alt="Projects" width="300">
-</a> 
-
-<a href="patents.html">  
-<img src="images/patents.jpg" alt="Patents" width="300">
-</a> 
-</p>
-
-<p>
-<a href="education.html">  
-<img src="images/education.jpg" alt="Education" width="300">
-</a> 
-
-<a href="conference_papers.html">  
-<img src="images/conference.jpg" alt="Conference Papers" width="300">
-</a> 
-</p>
 
 
 <p> Contact me: nalini dot ratha at gmail dot com </p>
