--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@ tr:nth-child(even) {
 }
 </style>
 </head>
+
+body {
+  text-align: center;
+ }
+
+#page-wrap {
+  text-align: left;
+  width: 800px;
+  margin: 0 auto;
+}
+
 <body>
 <img src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150"> 
 
