--- a/index.html
+++ b/index.html
@@ -35,54 +35,37 @@ body {
 }
 
 <body>
+img {
+     vertical-align:middle;
+}
+span {
+     vertical-align:middle;
+}
+<div id="photo" style="text-align: center">
+  <img style="vertical-align:middle" src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150">
+  <span style="vertical-align:middle">Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York where he lead the biometrics 
+research effort in the area of enhancing security of biometrics systems and performance evaluation of biometrics systems. 
+Currently, he focuses on extending the techniques to build robust and trustworthy AI systems. 
+He has co-edited two books entitled “Advances in Biometrics: Sensors, Algorithms and Systems” and “Automatic Fingerprint Recognition Systems” 
+published by Springer and co-authored a popular textbook entitled “A guide to Biometrics Selection and System design” published by Springer. 
+In the past, he has been associated with several leading biometrics conference starting with some of the very early biometrics conferences as 
+general co-chair of IEEE AutoID 02 and SPIE Conf. on Biometrics in Human Identification 2004, 2005, co-chair of an associated theme on biometrics 
+at ICPR 2006 and ICPR 2008 and also the co-chair of CVPR workshop on Biometrics 2006-2009, and 
+IEEE Biometrics Theory, Applications and Sytems (BTAS 07 -- BTAS 09). 
+More recently, he was the general co-chair of BTAs 2016 and ISAB 2017 and 2018 and program co-chair of IJCB 2020. 
+Over last couple of years, he has conducted several workshops and CVPR/ECCV/ICCV on bias, blockchain and disguised faces in the wild. 
+During CVPR 2020, he is leading a workshop on Trustworthy Vision Systems. In the past, he served on the editorial board of Pattern Recognition journal 
+and IEEE Trans. on Image Processing. He is a guest co-editor of a special issue on biometrics for IEEE Trans. on SMC-B and also for 
+IEEE Trans. on Information Forensics and Security. He served on the editorial board of IEEE Trans. on Pattern Analysis and Machine Intelligence 
+and IEEE Trans. on Systems, Man and Cybernetics- Part B. Recently, he is involved in co-editing a special issue on Domain Adaptation in Visual 
+Understanding (DAVU) for Pattern Recognition journal. He has received several patent awards and a “Research Division” award and an 
+“Outstanding Technical Innovation Award” at IBM and named a “Master Inventor” at IBM Research in 2018. He continues to teach at Cooper Union 
+and NYU-Poly as an Adjunct professor for last several years. He served as the President of the IEEE Biometrics Council from Jan 2011-Dec 2012 and 
+currently serves as the nomination chair for the IEEE Biometrics Council. He has served on advisory board of EU-INGRESS and EU-Fidelity and served 
+on several NSF evaluation panels. </span>
+</div>
+
 <img src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150"> 
-
-<p>
-<a href="education.html">  
-<img src="images/education.jpg" alt="Education" width="300">
-</a> 
-
-<a href="awards.html">  
-<img src="images/awards.jpg" alt="Awards and Recognitions" width="300">
-</a> 
-
-<a href="professional.html">  
-<img src="images/professional.jpg" alt="Professional" width="300">
-</a> 
-</p>
-
-<p>
-<a href="project.html">  
-<img src="images/projects.jpg" alt="Projects" width="300">
-</a> 
-
-<a href="patents.html">  
-<img src="images/patents.jpg" alt="Patents" width="300">
-</a> 
-</p>
-
-<p>
-<a href="journal_paper.html">  
-<img src="images/journal.jpg" alt="Journal Papers" width="300">
-</a> 
-
-<a href="conference_papers.html">  
-<img src="images/conference.jpg" alt="Conference Papers" width="300">
-</a> 
-
-<a href="books_proceedings.html">  
-<img src="images/books.jpg" alt="Books and Proceedings" width="300">
-</a> 
-</p>
-
-
-
-<p>
-
-
-
-</p>
-
 
 <h1> Summary </h1>
 Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York where he lead the biometrics 
@@ -118,5 +101,54 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 
 
 <p> Contact me: nalini dot ratha at gmail dot com </p>
+
+<p>
+<a href="education.html">  
+<img src="images/education.jpg" alt="Education" width="300">
+</a> 
+
+<a href="awards.html">  
+<img src="images/awards.jpg" alt="Awards and Recognitions" width="300">
+</a> 
+
+<a href="professional.html">  
+<img src="images/professional.jpg" alt="Professional" width="300">
+</a> 
+</p>
+
+<p>
+<a href="projects.html">  
+<img src="images/projects.jpg" alt="Projects" width="300">
+</a> 
+
+<a href="patents.html">  
+<img src="images/patents.jpg" alt="Patents" width="300">
+</a> 
+</p>
+
+<p>
+<a href="journal_paper.html">  
+<img src="images/journal.jpg" alt="Journal Papers" width="300">
+</a> 
+
+<a href="conference_papers.html">  
+<img src="images/conference.jpg" alt="Conference Papers" width="300">
+</a> 
+
+<a href="books_proceedings.html">  
+<img src="images/books.jpg" alt="Books and Proceedings" width="300">
+</a> 
+</p>
+
+
+
+<p>
+
+
+
+</p>
+
+
+
 </body>  
 </html>
