--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 </style>
+.container {
+  &__image {
+    width: 250px;
+    float: left;
+  }
+  &__text {
+    display: inline;
+  }
+}
 </head>
 <body>
-
-
-
-
 <div class="container">
     <img class="container__image" src=src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150"/>
     <div class="container__text">
