--- a/summary.html
+++ b/summary.html
@@ -1,35 +1,8 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- PAGE settings -->
-  <style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
-</head>
-<body>
-<a href="summary.html"> </a>
-
-<img src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150"> 
-
-<h1> Summary </h1>
-Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York where he lead the biometrics 
+<div class="container">
+    <img class="container__image" src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150"/>
+    <div class="container__text">
+        <h2>Summary</h2>
+        <p>Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York where he lead the biometrics 
 research effort in the area of enhancing security of biometrics systems and performance evaluation of biometrics systems. 
 Currently, he focuses on extending the techniques to build robust and trustworthy AI systems. 
 He has co-edited two books entitled “Advances in Biometrics: Sensors, Algorithms and Systems” and “Automatic Fingerprint Recognition Systems” 
@@ -37,8 +10,8 @@ published by Springer and co-authored a popular textbook entitled “A guide to 
 In the past, he has been associated with several leading biometrics conference starting with some of the very early biometrics conferences as 
 general co-chair of IEEE AutoID 02 and SPIE Conf. on Biometrics in Human Identification 2004, 2005, co-chair of an associated theme on biometrics 
 at ICPR 2006 and ICPR 2008 and also the co-chair of CVPR workshop on Biometrics 2006-2009, and 
-IEEE Biometrics Theory, Applications and Sytems (BTAS 07 -- BTAS 09). 
-More recently, he was the general co-chair of BTAs 2016 and ISAB 2017 and 2018 and program co-chair of IJCB 2020. 
+IEEE Biometrics Theory, Applications and Sytems (BTAS 07 -- BTAS 09).</p>
+        <p>More recently, he was the general co-chair of BTAs 2016 and ISAB 2017 and 2018 and program co-chair of IJCB 2020. 
 Over last couple of years, he has conducted several workshops and CVPR/ECCV/ICCV on bias, blockchain and disguised faces in the wild. 
 During CVPR 2020, he is leading a workshop on Trustworthy Vision Systems. In the past, he served on the editorial board of Pattern Recognition journal 
 and IEEE Trans. on Image Processing. He is a guest co-editor of a special issue on biometrics for IEEE Trans. on SMC-B and also for 
@@ -48,7 +21,8 @@ Understanding (DAVU) for Pattern Recognition journal. He has received several pa
 “Outstanding Technical Innovation Award” at IBM and named a “Master Inventor” at IBM Research in 2018. He continues to teach at Cooper Union 
 and NYU-Poly as an Adjunct professor for last several years. He served as the President of the IEEE Biometrics Council from Jan 2011-Dec 2012 and 
 currently serves as the nomination chair for the IEEE Biometrics Council. He has served on advisory board of EU-INGRESS and EU-Fidelity and served 
-on several NSF evaluation panels. 
+on several NSF evaluation panels.</p>
+
 <p>
 He received his Ph. D. from the Department of Computer Science at Michigan State University and B.Tech in Electrical Engineering and 
 M. Tech in Computer science and Engineering from Indian Institute of Technology, Kanpur. He is a Fellow of IEEE, Fellow of IAPR and 
@@ -58,54 +32,5 @@ ACM Distinguished Scientist.
 His current research interests include biometrics, computer vision, pattern recognition and special purpose architecture for computer vision systems. 
 In 2019, he won the IEEE Biometrics Council Leadership award. 
 </p>
-
-
-
-<p> Contact me: nalini dot ratha at gmail dot com </p>
-
-<p>
-<a href="education.html">  
-<img src="images/education.jpg" alt="Education" width="300">
-</a> 
-
-<a href="awards.html">  
-<img src="images/awards.jpg" alt="Awards and Recognitions" width="300">
-</a> 
-
-</p>
-
-<p>
-<a href="projects.html">  
-<img src="images/projects.jpg" alt="Projects" width="300">
-</a> 
-
-<a href="patents.html">  
-<img src="images/patents.jpg" alt="Patents" width="300">
-</a> 
-</p>
-
-<p>
-<a href="professional.html">  
-<img src="images/professional.jpg" alt="Professional" width="300">
-</a> 
-
-<a href="books_proceedings.html">  
-<img src="images/books.jpg" alt="Books and Proceedings" width="300">
-</a> 
-</p>
-
-<p>
-<a href="journal_paper.html">  
-<img src="images/journal.jpg" alt="Journal Papers" width="300">
-</a> 
-
-<a href="conference_papers.html">  
-<img src="images/conference.jpg" alt="Conference Papers" width="300">
-</a> 
-
-
-</p>
-
-
-</body>  
-</html>
+    </div>
+</div>
