--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,21 @@
+
+  <style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
 <H1> Projects </h1>
 <table style="width:80%">
   <tr>
